# proc-macro-error-2

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
proc-macro-error-attr/: Cargo.toml  build.rs
proc-macro-error-attr/src/: lib.rs
src/: diagnostic.rs  dummy.rs  lib.rs
test-crate/: Cargo.toml  lib.rs
test-crate/proc-macro-hack-test/demo-hack-impl/: Cargo.toml
tests/: macro-errors.rs  runtime-errors.rs
tests/ui/: abort.stderr  append_dummy.stderr  children_messages.stderr  dummy.stderr  emit.stderr  explicit_span_range.stderr  misuse.rs  misuse.stderr  multiple_tokens.stderr  option_ext.stderr  result_ext.stderr  to_tokens_span.stderr  unrelated_panic.stderr
