[package]
name = "proc-macro-error"
version = "1.0.4"
authors = ["CreepySkeleton <creepy-skeleton@yandex.ru>"]
description = "Almost drop-in replacement to panics in proc-macros"
repository = "https://gitlab.com/CreepySkeleton/proc-macro-error"
rust-version = "1.70"
keywords = ["proc-macro", "error", "errors"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
quote = "1"
proc-macro2 = "1"
proc-macro-error-attr = { path = "./proc-macro-error-attr", version = "=1.0.4" }

[dependencies.syn]
version = "2"
optional = true
default-features = false

[dev-dependencies]
test-crate = { path = "./test-crate" }
syn = { version = "2", features = ["full"] }
trybuild = { version = "1.0.99", features = ["diff"] }

[build-dependencies]
version_check = "0.9"

[features]
default = ["syn-error"]
syn-error = ["syn"]
