[package]
name = "proc-macro-error"
authors = [
    "CreepySkeleton <creepy-skeleton@yandex.ru>",
    "GnomedDev <david2005thomas@gmail.com>",
]
version = "1.0.4"
description = "Almost drop-in replacement to panics in proc-macros"
repository = "https://github.com/GnomedDev/proc-macro-error-2"
rust-version = "1.70"
keywords = ["proc-macro", "error", "errors"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
quote = "1"
proc-macro2 = "1"
proc-macro-error-attr = { path = "./proc-macro-error-attr", version = "=1.0.4" }

[dependencies.syn]
version = "2"
optional = true
default-features = false

[dev-dependencies]
test-crate = { path = "./test-crate" }
syn = { version = "2", features = ["full"] }
trybuild = { version = "1.0.99", features = ["diff"] }

[build-dependencies]
version_check = "0.9"

[features]
default = ["syn-error"]
syn-error = ["syn"]
