[package]
name = "proc-macro-error2"
authors = [
    "CreepySkeleton <creepy-skeleton@yandex.ru>",
    "GnomedDev <david2005thomas@gmail.com>",
]
version = "1.0.4"
description = "Almost drop-in replacement to panics in proc-macros"
repository = "https://github.com/GnomedDev/proc-macro-error-2"
rust-version = "1.61"
keywords = ["proc-macro", "error", "errors"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
quote = "1"
proc-macro2 = "1"
proc-macro-error-attr2 = { path = "./proc-macro-error-attr", version = "=1.0.4" }

[dependencies.syn]
version = "2"
optional = true
default-features = false

[dev-dependencies]
test-crate = { path = "./test-crate" }
syn = { version = "2", features = ["full"] }
trybuild = { version = "1.0.99", features = ["diff"] }

[features]
default = ["syn-error"]
syn-error = ["dep:syn"]
nightly = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(run_ui_tests)'] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = { level = "allow" }
