[package]
name = "proc-macro-error-attr2"
version = "1.0.4"
authors = [
    "CreepySkeleton <creepy-skeleton@yandex.ru>",
    "GnomedDev <david2005thomas@gmail.com>",
]
edition = "2021"
rust-version = "1.61"
description = "Attribute macro for proc-macro-error crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GnomedDev/proc-macro-error-2"

[lib]
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
quote = "1"
proc-macro2 = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
